SERVER-74526 Fix high CPU utilization for a change streams opened against secondary nodes

This reverts commit 34ac49477b87e183637f68cda828ecff8b393c64. Future
work is needed to reintroduce the changes from SERVER-69959 without
causing the problematic "busy wait" behavior on secondary nodes.